# globalHometask2_1_qt_v

./: CMakeLists.txt  README.md  bot.cpp  bot.h  conf.cpp  conf.h  debug.h  enemy.h  game.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  ship_wig.cpp  ship_wig.h
headers/: conf.h  game.h  other.h  player.h  ship_structs.h  ship_wig.h
src/: bot.cpp  conf.cpp  game.cpp  other.cpp  player.cpp  ship_wig.cpp
